--- a/src/app/game-ideas/game-ideas.component.html
+++ b/src/app/game-ideas/game-ideas.component.html
@@ -1,5 +1,5 @@
 <form class="search-form">
-    <div class="idea-input">
+  <div class="idea-input">
     <input
       name="ideaInput"
       type="text"
@@ -8,9 +8,8 @@
       placeholder="Input an Idea description to search..."
       [(ngModel)]="searchIdeaInput"
     />
-  </div>
-    <div *ngIf="!displayIdeas.length">No ideas found!</div>
-
+</div>
+  <div *ngIf="!displayIdeas.length">No Game Ideas found!</div>
 </form>
 
 <table
@@ -26,12 +25,18 @@
 
   <ng-container matColumnDef="upvotes">
     <th mat-header-cell *matHeaderCellDef>upvotes</th>
-    <td mat-cell *matCellDef="let element">{{ element.upvotes }}<button matButton (click)="upvote(element)">+</button></td>
+    <td mat-cell *matCellDef="let element">
+      {{ element.upvotes
+      }}<button matButton (click)="upvote(element)">+</button>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="downvotes">
     <th mat-header-cell *matHeaderCellDef>downvotes</th>
-    <td mat-cell *matCellDef="let element">{{ element.downvotes }}<button matButton (click)="downvote(element)">+</button></td>
+    <td mat-cell *matCellDef="let element">
+      {{ element.downvotes
+      }}<button matButton (click)="downvote(element)">+</button>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="status">
@@ -39,8 +44,10 @@
     <td mat-cell *matCellDef="let element">{{ element.status }}</td>
   </ng-container>
 
-
-
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+
+<div class="submit-idea">
+    <a routerLink="/submit-idea">Submit your Game Idea!</a>
+</div>
