--- a/src/app/game-ideas/game-ideas.component.scss
+++ b/src/app/game-ideas/game-ideas.component.scss
@@ -1,5 +1,5 @@
 .search-form {
-    margin-top: 20px;
+  margin-top: 20px;
   padding-left: 16px;
 
   .idea-input {
@@ -15,12 +15,12 @@
         outline: none;
       }
     }
-
   }
+}
 
-  .error {
-    color: red;
-  }
+.submit-idea {
+  margin-top: 20px;
+  padding-left: 16px;
 }
 
 .mat-mdc-header-cell,
