--- a/src/app/game-ideas/game-ideas.component.html
+++ b/src/app/game-ideas/game-ideas.component.html
@@ -8,40 +8,47 @@
       placeholder="Input an Idea description to search..."
       [(ngModel)]="searchIdeaInput"
     />
-</div>
+  </div>
   <div *ngIf="!displayIdeas.length">No Game Ideas found!</div>
 </form>
 
 <table
   *ngIf="displayIdeas.length"
   mat-table
-  [dataSource]="displayIdeas"
+  matSort
+  [dataSource]="sortTableDataSource"
   class="mat-elevation-z8"
 >
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef>description</th>
-    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    <td mat-cell *matCellDef="let element">
+      <div class="desc-col">
+        {{ element.description }}
+        <span class="vote-icons">
+          <mat-icon [class.active]="element.status === 'upvoted'" (click)="upvote(element)">thumb_up</mat-icon>
+          <mat-icon [class.active]="element.status === 'downvoted'" (click)="downvote(element)">thumb_down</mat-icon>
+        </span>
+      </div>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="upvotes">
-    <th mat-header-cell *matHeaderCellDef>upvotes</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>upvotes</th>
     <td mat-cell *matCellDef="let element">
-      {{ element.upvotes
-      }}<button matButton (click)="upvote(element)">+</button>
+      {{ element.upvotes }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="downvotes">
-    <th mat-header-cell *matHeaderCellDef>downvotes</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>downvotes</th>
     <td mat-cell *matCellDef="let element">
-      {{ element.downvotes
-      }}<button matButton (click)="downvote(element)">+</button>
+      {{ element.downvotes }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef>voted</th>
-    <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+    <th mat-header-cell *matHeaderCellDef>you voted</th>
+    <td mat-cell *matCellDef="let element">{{ element.status === 'none' ? 'no' : 'yes' }}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -49,5 +56,5 @@
 </table>
 
 <div class="submit-idea">
-    <a routerLink="/submit-idea">Submit your Game Idea!</a>
+  <a routerLink="/submit-idea">Submit your Game Idea!</a>
 </div>
