--- a/src/app/game-ideas/game-ideas.component.html
+++ b/src/app/game-ideas/game-ideas.component.html
@@ -9,11 +9,11 @@
       [(ngModel)]="searchIdeaInput"
     />
   </div>
-  <div *ngIf="!displayIdeas.length">No Game Ideas found!</div>
+  <div *ngIf="!sortTableDataSource.data.length">No Game Ideas found!</div>
 </form>
 
 <table
-  *ngIf="displayIdeas.length"
+  *ngIf="sortTableDataSource.data.length"
   mat-table
   matSort
   [dataSource]="sortTableDataSource"
@@ -25,8 +25,16 @@
       <div class="desc-col">
         {{ element.description }}
         <span class="vote-icons">
-          <mat-icon [class.active]="element.status === 'upvoted'" (click)="upvote(element)">thumb_up</mat-icon>
-          <mat-icon [class.active]="element.status === 'downvoted'" (click)="downvote(element)">thumb_down</mat-icon>
+          <mat-icon
+            [class.active]="element.status === 'upvoted'"
+            (click)="upvote(element)"
+            >thumb_up</mat-icon
+          >
+          <mat-icon
+            [class.active]="element.status === 'downvoted'"
+            (click)="downvote(element)"
+            >thumb_down</mat-icon
+          >
         </span>
       </div>
     </td>
@@ -48,7 +56,9 @@
 
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>you voted</th>
-    <td mat-cell *matCellDef="let element">{{ element.status === 'none' ? 'no' : 'yes' }}</td>
+    <td mat-cell *matCellDef="let element">
+      {{ element.status === "none" ? "no" : "yes" }}
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
