--- a/src/app/game-idea-submission/game-idea-submission.component.html
+++ b/src/app/game-idea-submission/game-idea-submission.component.html
@@ -7,13 +7,19 @@
     matInput
     placeholder="Input your Idea description..."
   ></textarea>
-  <div class="submit-btn">
+  <div class="actions">
     <button
       matButton="outlined"
       (click)="submitIdea()"
       [disabled]="ideaDescription.invalid"
     >
       Submit
+    </button>
+    <button
+      matButton="outlined"
+      (click)="router.navigate(['/game-ideas'])"
+    >
+      Back
     </button>
   </div>
 </form>
